fix overflowwc

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -23,11 +23,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    top: 700px;
+    top: 750px;
     right: 100px;
     width: 100%;
     height: 300px;
-    overflow: hidden;
     opacity: 0.3;
     position: absolute;
     z-index: -1;
